--- a/style.css
+++ b/style.css
@@ -23,19 +23,24 @@ nav {
     margin: 10px 5px;
 }
 
+#container{
+    margin:10px auto;
+    height:auto;
+    overflow:hidden;
+}
+
 section {
     background: #ebebeb;
     text-align:center;
     float:left;
     width: 495px;
     height:100%;
+    margin:5px;
     padding:5px;
-    margin: 10px 5px;
-    display:block;
-    box-sizing: border-box;
-    flex-grow:1;
-}/*Instructions contradict width of section div - Overview 
-instructs code should mirror image which has the section div sitting
+    clear:both;
+}
+/*Instructions contradict width of section div. Overview 
+instructs code should mirror image and has the section div sitting
 at about 60% of the webpage, but the 3rd Additional Specification
 has its width defined as 495px. Seeing as CSS is rendered top to bottom
 I'm going with the lower of the two instructions */
@@ -46,8 +51,7 @@ aside {
     float:right;
     width:45%;
     height:264px;
-    margin: 10px 5px;
-    display:block;
+    margin:5px;
     box-sizing: border-box;
 }
 
@@ -79,17 +83,8 @@ footer {
     background: #ebebeb;
     text-align:center;
     padding: 30px;
-    margin: 10px 5px;
-    margin-bottom:65px;
-    position:fixed;
-    bottom:0;
+    margin: 30px auto;
+    clear:both;
     width:950px;
     box-sizing: border-box;
 }
-/*
-position:fixed;
-bottom:0;
-padding: 10px;
-margin: auto auto;
-
-width:960px;*/
